# bagpype

./: README.md  main.py  pyproject.toml
bagpipe/: __init__.py  models.py  pipeline.py  visualization.py
src/bagpipe/: __init__.py  visualization.py
tests/: test_constructors.py
