[project]
name = "bagpipe"
version = "0.1.0"
description = "A python library for pipeline diagram visualization"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
dependencies = [
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]
keywords = ["pipeline", "visualization", "computer architecture"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
